# bevy_basic_game

./: Cargo.toml
src/: events.rs  global_plugins.rs  global_systems.rs  main.rs  sys_sets.rs
src/enemy/: mod.rs  resources.rs  systems.rs
src/game/: mod.rs  systems.rs
src/game/enemy/: components.rs  mod.rs  systems.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/score/: mod.rs  resources.rs  systems.rs
src/game/ui/: mod.rs
src/game/ui/game_over_menu/: components.rs  mod.rs  styles.rs
src/game/ui/game_over_menu/systems/: interactions.rs  layout.rs
src/game/ui/hud/: components.rs  mod.rs  resources.rs  styles.rs
src/game/ui/hud/systems/: layout.rs  mod.rs  updates.rs
src/game/ui/level_up_menu/: components.rs  mod.rs  styles.rs
src/game/ui/level_up_menu/systems/: interactions.rs  layout.rs
src/game/ui/main_menu/: mod.rs  styles.rs
src/game/ui/main_menu/systems/: interactions.rs  layout.rs
src/game/ui/pause_menu/: components.rs  mod.rs  styles.rs
src/game/ui/pause_menu/systems/: interactions.rs  layout.rs
src/main_menu/: components.rs  mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/player/: mod.rs  systems.rs
