[package]
name = "bevy_basic_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
# do a lot of trace logging that is not relevant for an end user
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] } 
rand = "0.9.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Windows
# lld is much faster at linking than the default Rust linker. 
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

# ! 
# cargo add bevy -F dynamic_linking
#
# [enabled]
#
# Shipping your game with dynamic linking enabled is not recommended because it requires 
# you to include libbevy_dylib alongside your game, it prevents certain optimizations, 
# and can increase the size of your game. If you remove the dynamic_linking feature, 
# your game executable can run standalone.